--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://lh3.googleusercontent.com/bfCF3QUaw0ZyoCE1JYjDWUysO6WyGJC78Ql-l8Mtrk4RQjMRZ7va8TKq9ShV87RShOtldgnFhXKFyWF3wB1DihwvHUADBNBEJJscfUKg_483CX3HV8mugWqwImQGosCgD_CRR5ervSzNej7xI5H0WSvld-6hbU0pgUlayEDFWBYazJjjozyn2CU1eQ5oN32KFsWlFDztqFG5LBlSZTIMzrMSI3ucJyqm8Io22s-FNCvVq-qsBpo3bljz__-lQa4-yafiQ20UntCLku4cIVjGZ3_cofgp1COUfCve38KQO1OyK-22oErsaXQRciOGEcaX03-twNLx_XUYbpyseOtSo6Jqn-yiTIfqq0z3TQ5LQVCQBlK4d1ZmUJy5e9rp71w-Vvr6P7ybL4mKNpZs3hjRWKRAut3z2w8BkJj2kyaW4aveud2cbDKmPoMAGpHJhcoq8YO8R-wwoQIT6ZE_NoxdVB_itgmakPzp7lhv2JcdVx6pGxPsXy3yqWbxIl6I_j9uRQL-YknnyIm9jEelnyzIjJJV1vqFKr6Gbjf24feBYQ8-kXd36XEIWmOZS0gf_FC8Fbwljc6W_IVukbRhPbBqST-TtqyGM4VX-9Mf7gddn_9GN3KKpsJfiZ1wG8L-wXYlV7R6xjOp6KJTlU5JI_Fv7yGJjNC5wRCR1zCmtiKm38d7NY4m_RXTcp05Xe8=w103-h93-no?authuser=0" border-radius="100"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Huynh Trong Dao - @imgarp13</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
